clean up and validation ( phase1 )
ran each page tough a validator and added some fade in animations to images

--- a/aiga-poster-casestudy.html
+++ b/aiga-poster-casestudy.html
@@ -18,8 +18,8 @@
     </nav>
   </header>
   <div class="projectDisplay">
-    <img src="images/partofit.jpg" class="relientkposter" alt="Hand-painted poster for the band Relient K. It features a boy flying away from the foreground while grasping onto a cloud. The cloud resembles a woman.">
-    <img src="images/candlelight.jpg" class="relientkposter" alt="Hand-painted poster for the band Relient K. It features a skeleton hand erupting from the earth, with its flesh regrowing towards the top. There are spruce trees in the background. The focal point of the drawing is a moth radiating a bright light as it rests upon the finger of the skeleton's hand.">
+    <img src="images/partofit.jpg" class="projectImage" alt="Hand-painted poster for the band Relient K. It features a boy flying away from the foreground while grasping onto a cloud. The cloud resembles a woman.">
+    <img src="images/candlelight.jpg" class="projectImage" alt="Hand-painted poster for the band Relient K. It features a skeleton hand erupting from the earth, with its flesh regrowing towards the top. There are spruce trees in the background. The focal point of the drawing is a moth radiating a bright light as it rests upon the finger of the skeleton's hand.">
   </div>
   <div class="nextbar">
     <h4><a href="a.html">NEXT&nbsp;PROJECT</a></h4>
@@ -69,7 +69,7 @@
 
         <!-- INSTAGRAM SVG AND LINK -->
 
-        <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
           <style type="text/css">
           </style>
@@ -93,7 +93,7 @@
 
           <!-- LINKED IN SVG AND LINK -->
 
-        <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
        <style type="text/css">
        </style>
