--- a/process.html
+++ b/process.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <div class="mainProcess">
-    <video playsinline autoplay muted="images/sand-still.png" class="largerSize" src="images/colored-sand.mp4">
+    <video title="animated background sequence of teal-colored sand floating and dispersing around the main screen" playsinline autoplay muted poster="images/sand-still.png" class="largerSize" src="images/colored-sand.mp4">
     </video>
 
     <div class="processShowcase">
@@ -26,7 +26,7 @@
       <img src="images/crossword.png" class="crossword" alt="the words drawing, screenprint, and paining displayed in a crossword-like formation">
       <img src="images/pin1.png" class="terriblePin" alt="a thin black like with a ball at the end of it">
       <img src="images/pin2.png" class="auroraPin" alt="a thin black like with a ball at the end of it">
-      <img src="images/pin1.png" class="screenPin"alt="a thin black like with a ball at the end of it">
+      <img src="images/pin1.png" class="screenPin" alt="a thin black like with a ball at the end of it">
       <img src="images/terriblefate-mini.png" class="terriblefate-mini" alt="a photo of jake woodard's artwork depicitng majora's mask from the legend of zelda video game series, its made in black ink pen">
       <img src="images/aurorablue.png" class="auora" alt="jake's painting of a forest scene with a gorgeous blue aroma in the background">
       <a href="screenprint-casestudy.html"><img src="images/fourlayerprint-mini.png" class="screenprint" alt="jake's photo of a teal and green screen printed image with graffiti-like typography and a cool doodle background"></a> 
@@ -57,7 +57,7 @@
 
          <!-- INSTAGRAM SVG AND LINK -->
 
-          <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
             <style type="text/css">
             </style>
@@ -81,7 +81,7 @@
 
             <!-- LINKED IN SVG AND LINK -->
 
-          <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
          <style type="text/css">
          </style>
