--- a/design.html
+++ b/design.html
@@ -12,7 +12,7 @@
     <nav class="nav">
       <ul>
         <li><a href="design.html">Design</a></li>
-        <li><a href="index.html">Jake&nbspWoodard</a></li>
+        <li><a href="index.html">Jake Woodard</a></li>
         <li><a href="process.html">Process</a></li>
       </ul>
     </nav>
@@ -22,22 +22,13 @@
   <a href="index.html"><img src="images/triangle-arrow.svg" class="designrightArrow" alt="dark blue arrow facing right"></a>
 
   <!--BACKGROUND ANIMATION-->
-
-  <video playsinline autoplay muted="images/sand-still.png" class="designvideo1" src="images/colored-sand.mp4">
+<div class="sandonside">
+  <video title="animated background sequence of black and white sand floating and dispersing around the left part of the screen" playsinline autoplay muted poster="images/sand-still.png" class="designvideo1" src="images/colored-sand.mp4">
   </video>
 
-  <video playsinline autoplay muted="images/sand-still.png" class="designvideo2" src="images/colored-sand.mp4">
+  <video title="animated background sequence of black and white sand floating and dispersing around the right part of the screen" playsinline autoplay muted poster="images/sand-still.png" class="designvideo2" src="images/colored-sand.mp4">
   </video>
-
-  <!--PAGE ARROW
-  
-    <div class="rightArrow">
-      <a href="process.html"><img src="images/triangle-arrow.svg" alt="a black triangle pointing to the bottom of the screen"></a>
-    </div>
-
--->
-
-  <!-- CAROUSEL 1 -->
+</div>
 
   <section class="carousel">
     <ul class="paginationIllustration">
@@ -192,7 +183,7 @@
 
        <!-- INSTAGRAM SVG AND LINK -->
 
-        <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
           <style type="text/css">
           </style>
@@ -216,7 +207,7 @@
 
           <!-- LINKED IN SVG AND LINK -->
 
-        <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
        <style type="text/css">
        </style>
