--- a/screenprint-casestudy.html
+++ b/screenprint-casestudy.html
@@ -12,7 +12,7 @@
     <nav class="nav">
       <ul>
         <li><a href="design.html">Design</a></li>
-        <li><a href="index.html">Jake&nbspWoodard</a></li>
+        <li><a href="index.html">Jake Woodard</a></li>
         <li><a href="process.html">Process</a></li>
       </ul>
     </nav>
@@ -67,7 +67,7 @@
 
        <!-- INSTAGRAM SVG AND LINK -->
 
-        <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <li><a href="https://www.instagram.com/jakecypress/"><svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
           <style type="text/css">
           </style>
@@ -91,7 +91,7 @@
 
           <!-- LINKED IN SVG AND LINK -->
 
-        <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <li><a href="https://www.linkedin.com/in/jpwoodard/"><svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
        <style type="text/css">
        </style>
