First round of spelling and grammer check
time to make sure english is "englishing" lol.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="about">
           <div class="tileStack">
           <h4>Why I Design</h4>
-          <p><span class="italics">From the strokes</span> of a paintbrush to the precision of pixels, I thrive on diversifying my craft and learning something new with every project. My designs are not just visual representations; they're stories waiting to be told, emotions waiting to be felt, and ideas waiting to be embraced. I provide design solutions to your problems and even answer problems you didn't even know you had. </p>
+          <p>From the strokes of a paintbrush to the precision of pixels, I thrive on diversifying my craft and learning something new with every project. My designs are not just visual representations; they're stories waiting to be told, emotions waiting to be felt, and ideas waiting to be embraced. I provide innovative design solutions to answer problems you didn't even know you had.
+          </p>
           </div>
           <div class="tileStack">
           <h4>How I Design</h4>
