--- a/contact-confirmationpage.html
+++ b/contact-confirmationpage.html
@@ -19,7 +19,7 @@
     </header>
     <div class=confirmation>
       <img src="images/backarrow.gif" class="return" alt="animated gray arrow that is gesturing toward the home button called 'jake woodard'">
-      <h3>Thank you for submitting a request! Jake will get back to you shortly. Looking foward to working with you.</h3>
+      <h3>Thank you for submitting a request! Jake will get back to you shortly. Looking forward to working with you.</h3>
     </div>
   </body>
   </html>
