Fixed grammer and added comments
Worked on css comments to reminded myself what each element is for, next phase is to validate code one more time before submission just to be sure. Got to quadruple check!

--- a/aiga-poster-casestudy.html
+++ b/aiga-poster-casestudy.html
@@ -27,7 +27,7 @@
 
   <div class="partofitGrid">
     <div class="leftImage">
-    <img src="images/partofit-zoomed.png" class="partofit-zoomed" alt="Zoomed-in picture of the 'Part of It' photo, focusing on the boy grasping the cloud with his hand.">
+    <img src="images/partofit-zoomed.png" class="zoomed" alt="Zoomed-in picture of the 'Part of It' photo, focusing on the boy grasping the cloud with his hand.">
   </div>
     <div class="textContent">
     <h4>“Part of it”</h4>
@@ -40,7 +40,7 @@
     <p>This concept represents Matt Thiessen, the singer and songwriter of the album, going through the acceptance phase of a breakup. Thiessen is finally seeing his ex for what she was now that he is no longer in the relationship. The moth is a fun twist on "moth to a flame," where the moth is the light source instead. Like many other guys, he was drawn to his ex’s beauty, but in this concept, he is drawn toward the very thing that got in the way of that light: the truth, as the lyric suggests, "the truth gave me light." The skin growing back from the light shows how that mindset brings him back to life.</p>
   </div>
   <div class="leftRight">
-    <img src="images/candlelight-zoomed.png" class="candlelight-zoomed" alt="Zoomed-in photo of the 'Candlelight' poster. Upon closer inspection, you can see the flesh of the skin regrowing around the bones.">
+    <img src="images/candlelight-zoomed.png" class="zoomed" alt="Zoomed-in photo of the 'Candlelight' poster. Upon closer inspection, you can see the flesh of the skin regrowing around the bones.">
   </div>
   </div>
 
