More Media Queries

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     </nav>
   </header>
   <div>
+    <div class="heroVideoContainer">
     <video title="animated background sequence of teal-colored sand floating and dispersing around the main screen" playsinline autoplay muted poster="images/sand-still.png" class="fullscreen" src="images/colored-sand.mp4">
     </video>
+  </div>
 
       <div class="me">
         <h2 class="firstandlast"><a href="#headshot">JAKE&nbsp;WOODARD</a></h2>
