--- a/process.html
+++ b/process.html
@@ -30,7 +30,7 @@
       <img src="images/pin1.png" class="screenPin" alt="a thin black like with a ball at the end of it">
       <img src="images/terriblefate-mini.png" class="terriblefate-mini" alt="a photo of jake woodard's artwork depicitng majora's mask from the legend of zelda video game series, its made in black ink pen">
       <img src="images/aurorablue.png" class="auora" alt="jake's painting of a forest scene with a gorgeous blue aroma in the background">
-      <a href="screenprint-casestudy.html"><img src="images/fourlayerprint-mini.png" class="screenprint" alt="jake's photo of a teal and green screen printed image with graffiti-like typography and a cool doodle background"></a> 
+      <a href="screenprint-casestudy.html" class="processLink"><img src="images/fourlayerprint-mini.png" class="screenprint" alt="jake's photo of a teal and green screen printed image with graffiti-like typography and a cool doodle background"></a> 
     </div>
 
     <form action="contact-confirmationpage.html" method="get" class="processForm">
