even more media Queries

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
     <div class=bioSection>
-      <h3>“I'm Jake Woodard, a graphic designer merging traditional and digital media to craft clever concepts and captivating designs.”</h3>
+      <h3 class="bioSectionType">“I'm Jake Woodard, a graphic designer merging traditional and digital media to craft clever concepts and captivating designs.”</h3>
     </div>
     
       <div class="whyandhow">
